* V1.6.14x
  * adding mode to skip tmp files/directories when downloading entry
  * fixing bug in entry downloader
  * adding __version__ to CK kernel
  * providing URLs where to download Git and Python for installation
  * automatically extracting repo name from URL string when pulling repos from GitHub via --url

* V1.6.14
  * forgot to add cfg module to setup.py (preferred to generate new version)

* V1.6.13
  * adding 'ck cmd test' to let users understand CK command line -
    it will just print input as JSON ...
  * adding input print when creating dummy module to help
    users understand command line
  * checking if CK directory exists when updating kernel
  * can now generate new UID when renaming entires (--new_uid)
    to avoid collecting experiments from multiple users 
    with the same UID ...
  * can now add UID to alias when renaming entries (--add_uid_to_alias)
    to distinguish some shared entries with common alias ...
  * if adding json via CMD (@@key) and string is empty,
    convert it to {} (empty dict) rather than failing.
    Also add missing {}.
  * removing extra \n when entering JSON from CMD ...
  * slightly improving Readme (adding our latest position paper 
    about CK from DATE'16)
  * fixing issue with 'read-only' files on Windows 
    when removing a given repo completely
  * fixing issue when installing repository manually downloaded
    from GitHub (removing root directory), see issue #46
  * checking if git command line client is installed 
    when pulling shared repo 
  * improving listing of all modules and actions
  * now you can add tags from CMD when adding/updating entries (ck add dataset:xyz --tags=abc)
  * improving ck.list_all_files (avoid recursive symbolic directories, add path if needed)
  * added --quiet mode when creating new modules (to simplify procedure)
  * fixing small buy when detecting latest CK version (works even if non-integer value)