@@ -4,6 +4,8 @@
   * adding __version__ to CK kernel
   * providing URLs where to download Git and Python for installation
   * automatically extracting repo name from URL string when pulling repos from GitHub via --url
+  * added action 'show' to 'repo' module to be able to open browser 
+    with an URL of a shared repository. For example, 'ck show repo:ck-autotuning'
 
 * V1.6.14
   * forgot to add cfg module to setup.py (preferred to generate new version)
